--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sequelize/core": "^7.0.0-alpha.10",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
     "cli": "^1.0.1",
