--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@types/redux": "^3.6.0",
     "axios": "^0.26.0",
     "date-fns": "^2.28.0",
+    "lodash": "^4.17.21",
     "materialize-css": "^1.0.0-rc.2",
     "query-string": "^7.1.1",
     "react": "^17.0.2",
@@ -43,7 +44,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint src/*",
+    "lint:fix": "eslint src/* --fix",
+    "lint:quiet": "eslint src/* --quiet"
   },
   "eslintConfig": {
     "extends": [
@@ -65,6 +69,15 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.3.3",
-    "@types/styled-components": "^5.1.22"
+    "@types/styled-components": "^5.1.22",
+    "@typescript-eslint/eslint-plugin": "^5.12.1",
+    "@typescript-eslint/parser": "^5.12.1",
+    "eslint": "^8.10.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.29.2",
+    "eslint-plugin-react-hooks": "^4.3.0"
   }
 }
