--- a/server/package.json
+++ b/server/package.json
@@ -17,16 +17,20 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.0",
     "env": "^0.0.2",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.25.4",
     "express": "^4.17.2",
     "express-joi-validation": "^5.0.1",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "multer": "^1.4.4",
     "pg": "^8.7.1",
     "sequelize": "^6.15.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "eslint": "^8.10.0",
     "nodemon": "^2.0.15",
     "sequelize-cli": "^6.4.1"
   }
