--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "@types/redux": "^3.6.0",
     "axios": "^0.26.0",
     "date-fns": "^2.28.0",
+    "history": "^5.3.0",
     "lodash": "^4.17.21",
     "materialize-css": "^1.0.0-rc.2",
     "query-string": "^7.1.1",
